added card-image hover

--- a/index.html
+++ b/index.html
@@ -54,11 +54,22 @@
       <div
         class="h-4/5 md:h-full w-4/5 md:w-1/5 bg-card p-8 rounded-xl shadow-2xl shadow-slate-900"
       >
-        <img
-          src="images/image-equilibrium.jpg"
-          alt="Equilibrium"
-          class="rounded-xl"
-        />
+        <div class="">
+          <div
+            class="w-full h-full bg-cyan rounded-xl relative flex justify-center items-center group"
+          >
+            <img
+              src="images/icon-view.svg"
+              class="absolute hidden group-hover:block z-50"
+              alt="view"
+            />
+            <img
+              src="images/image-equilibrium.jpg"
+              alt="Equilibrium"
+              class="rounded-xl cursor-pointer hover:opacity-50"
+            />
+          </div>
+        </div>
         <h3 class="text-white text-2xl font-semibold pt-6">
           Equilibrium #3429
         </h3>
