changed image container from div to link

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         class="h-4/5 md:h-full w-4/5 md:w-1/5 bg-card p-8 rounded-xl shadow-2xl shadow-slate-900"
       >
         <div class="">
-          <div
+          <a
             class="w-full h-full bg-cyan rounded-xl relative flex justify-center items-center group"
           >
             <img
               src="images/icon-view.svg"
-              class="absolute hidden group-hover:block z-50"
+              class="absolute hidden group-hover:block z-1"
               alt="view"
             />
             <img
@@ -68,8 +68,7 @@
               alt="Equilibrium"
               class="rounded-xl cursor-pointer hover:opacity-50"
             />
-          </div>
-        </div>
+          </a>
         <h3 class="text-white text-2xl font-semibold pt-6">
           Equilibrium #3429
         </h3>
@@ -104,7 +103,7 @@
             class="h-8 w-8 rounded-full border-2 border-white mr-4"
           />
           <p class="text-para">
-            Creation of <span class="text-white">Jules Wyvern</span>
+            Creation of <a href="3" class="text-white">Jules Wyvern</a>
           </p>
         </div>
       </div>
